// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Sets V1 render Edit Input Set Form view 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard pageHeaderStyles StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    data-testid="page-header"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/ci"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="ci-main"
              >
                <svg
                  height="16"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M29 16a13.02 13.02 0 01-.854 4.6.387.387 0 01-.637.13l-3.99-3.94a.534.534 0 01-.085-.628c.432-.827.649-1.773.649-2.762.056-3.222-2.6-5.878-5.879-5.878-1.04 0-1.994.26-2.823.706a.53.53 0 01-.623-.08l-3.551-3.504a.48.48 0 01.154-.794A12.79 12.79 0 0116 3c7.178 0 13 5.822 13 13zM8.476 5.42a.582.582 0 01.746.072l4.035 4.035c.179.178.194.46.054.67a5.829 5.829 0 00-.985 3.26 5.934 5.934 0 005.935 5.934 5.829 5.829 0 003.26-.985.531.531 0 01.67.054l4.367 4.368a.582.582 0 01.065.756C24.225 26.86 20.4 29 16 29 8.822 29 3 23.178 3 16c0-4.403 2.144-8.231 5.476-10.58zm9.785 11.71a3.932 3.932 0 003.956-3.956 3.932 3.932 0 00-3.956-3.957 3.932 3.932 0 00-3.957 3.957 3.932 3.932 0 003.957 3.956z"
                    fill="url(#ci-main_svg__a)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="ci-main_svg__a"
                      x1="-5.398"
                      x2="11.398"
                      y1="11.398"
                      y2="37.398"
                    >
                      <stop
                        stop-color="#73DFE7"
                      />
                      <stop
                        offset="1"
                        stop-color="#0095F7"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                test
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/ci/orgs/testOrg/projects/test/pipelines"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                pipelines
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/ci/orgs/testOrg/projects/test/pipelines/pipeline/input-sets?connectorRef=ValidGithubRepo&repoName=gitSyncRepo&branch=feature&storeType=REMOTE"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="width: 42%;"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold StyledProps--font-variation-h4 StyledProps--margin-right-medium"
          style="--text-line-clamp: 1;"
        >
          inputSets.editTitle
        </p>
        <span
          class="bp3-popover-wrapper bp3-dark reconcileMenu"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              aria-label="input set menu actions"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Options"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 4 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="2"
                    cy="2"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="14"
                    r="1.5"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main inputSetForm"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <div
            class="inputsetGrid"
          >
            <div>
              <form
                action="#"
                class="FormikForm--main"
              >
                <div>
                  <div
                    class="Layout--vertical StyledProps--main content StyledProps--padding-xlarge"
                  >
                    <div
                      class="StyledProps--font StyledProps--main main nameiddescription"
                    >
                      <div
                        class="InputWithIdentifier--txtNameContainer TextInput--main"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                        >
                          <div
                            class="Text--withDocsTooltip"
                            data-tooltip-id="universalInputNameWithId"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              Id
                            </p>
                          </div>
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            :
                          </p>
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                              >
                                <span
                                  class="bp3-editable-text-content"
                                  style="height: 1px; line-height: 1px; min-width: 0;"
                                >
                                  asv
                                </span>
                              </div>
                            </span>
                          </span>
                        </div>
                        <div
                          class="bp3-form-group bp3-disabled"
                          data-id="name-0"
                        >
                          <label
                            class="bp3-label"
                            for="name"
                          >
                            <span
                              class="Tooltip--acenter"
                              data-tooltip-id="inputSetV1Form_name"
                            >
                              name
                            </span>
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                name="name"
                                type="text"
                                value="asv"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="description-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="tags-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main footer StyledProps--padding-xlarge"
                  >
                    <button
                      aria-label="save"
                      class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main saveCancelBtn Button--with-current-color Button--variation Button--variation-primary"
                      disabled=""
                      tabindex="-1"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        save
                      </span>
                    </button>
                    <button
                      aria-label="cancel"
                      class="bp3-button Button--button StyledProps--font StyledProps--main saveCancelBtn Button--with-current-color Button--variation Button--variation-tertiary"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        cancel
                      </span>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input Sets V1 render Edit Input Set Form view: expanded 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard pageHeaderStyles StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    data-testid="page-header"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/ci"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="ci-main"
              >
                <svg
                  height="16"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M29 16a13.02 13.02 0 01-.854 4.6.387.387 0 01-.637.13l-3.99-3.94a.534.534 0 01-.085-.628c.432-.827.649-1.773.649-2.762.056-3.222-2.6-5.878-5.879-5.878-1.04 0-1.994.26-2.823.706a.53.53 0 01-.623-.08l-3.551-3.504a.48.48 0 01.154-.794A12.79 12.79 0 0116 3c7.178 0 13 5.822 13 13zM8.476 5.42a.582.582 0 01.746.072l4.035 4.035c.179.178.194.46.054.67a5.829 5.829 0 00-.985 3.26 5.934 5.934 0 005.935 5.934 5.829 5.829 0 003.26-.985.531.531 0 01.67.054l4.367 4.368a.582.582 0 01.065.756C24.225 26.86 20.4 29 16 29 8.822 29 3 23.178 3 16c0-4.403 2.144-8.231 5.476-10.58zm9.785 11.71a3.932 3.932 0 003.956-3.956 3.932 3.932 0 00-3.956-3.957 3.932 3.932 0 00-3.957 3.957 3.932 3.932 0 003.957 3.956z"
                    fill="url(#ci-main_svg__a)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="ci-main_svg__a"
                      x1="-5.398"
                      x2="11.398"
                      y1="11.398"
                      y2="37.398"
                    >
                      <stop
                        stop-color="#73DFE7"
                      />
                      <stop
                        offset="1"
                        stop-color="#0095F7"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                test
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/ci/orgs/testOrg/projects/test/pipelines"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                pipelines
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/ci/orgs/testOrg/projects/test/pipelines/pipeline/input-sets?connectorRef=ValidGithubRepo&repoName=gitSyncRepo&branch=feature&storeType=REMOTE"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="width: 42%;"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold StyledProps--font-variation-h4 StyledProps--margin-right-medium"
          style="--text-line-clamp: 1;"
        >
          inputSets.editTitle
        </p>
        <span
          class="bp3-popover-wrapper bp3-dark reconcileMenu"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              aria-label="input set menu actions"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Options"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 4 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="2"
                    cy="2"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="14"
                    r="1.5"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main inputSetForm"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <div
            class="inputsetGrid"
          >
            <div>
              <form
                action="#"
                class="FormikForm--main"
              >
                <div>
                  <div
                    class="Layout--vertical StyledProps--main content StyledProps--padding-xlarge"
                  >
                    <div
                      class="StyledProps--font StyledProps--main main nameiddescription"
                    >
                      <div
                        class="InputWithIdentifier--txtNameContainer TextInput--main"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                        >
                          <div
                            class="Text--withDocsTooltip"
                            data-tooltip-id="universalInputNameWithId"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              Id
                            </p>
                          </div>
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            :
                          </p>
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                              >
                                <span
                                  class="bp3-editable-text-content"
                                  style="height: 1px; line-height: 1px; min-width: 0;"
                                >
                                  asv
                                </span>
                              </div>
                            </span>
                          </span>
                        </div>
                        <div
                          class="bp3-form-group bp3-disabled"
                          data-id="name-0"
                        >
                          <label
                            class="bp3-label"
                            for="name"
                          >
                            <span
                              class="Tooltip--acenter"
                              data-tooltip-id="inputSetV1Form_name"
                            >
                              name
                            </span>
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                name="name"
                                type="text"
                                value="asv"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="description-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="tags-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main footer StyledProps--padding-xlarge"
                  >
                    <button
                      aria-label="save"
                      class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main saveCancelBtn Button--with-current-color Button--variation Button--variation-primary"
                      disabled=""
                      tabindex="-1"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        save
                      </span>
                    </button>
                    <button
                      aria-label="cancel"
                      class="bp3-button Button--button StyledProps--font StyledProps--main saveCancelBtn Button--with-current-color Button--variation Button--variation-tertiary"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        cancel
                      </span>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input Sets V1 render Input Set Form view 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard pageHeaderStyles StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    data-testid="page-header"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/cd"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="cd-main"
              >
                <svg
                  height="16"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                    fill="url(#cd-main_svg__a)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cd-main_svg__a"
                      x1="6.774"
                      x2="21.5"
                      y1="2"
                      y2="30"
                    >
                      <stop
                        stop-color="#62F91F"
                      />
                      <stop
                        offset="1"
                        stop-color="#45BD35"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                test
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/cd/orgs/testOrg/projects/test/pipelines"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                pipelines
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/cd/orgs/testOrg/projects/test/pipelines/pipeline/input-sets?connectorRef=ValidGithubRepo&repoName=gitSyncRepo&branch=feature&storeType=REMOTE"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="width: 42%;"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold StyledProps--font-variation-h4 StyledProps--margin-right-medium"
          style="--text-line-clamp: 1;"
        >
          inputSets.newInputSetLabel
        </p>
        <span
          class="bp3-popover-wrapper bp3-dark reconcileMenu"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              aria-label="input set menu actions"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Options"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 4 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="2"
                    cy="2"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="14"
                    r="1.5"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main inputSetForm"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <div
            class="inputsetGrid"
          >
            <div>
              <form
                action="#"
                class="FormikForm--main"
              >
                <div>
                  <div
                    class="Layout--vertical StyledProps--main content StyledProps--padding-xlarge"
                  >
                    <div
                      class="StyledProps--font StyledProps--main main nameiddescription"
                    >
                      <div
                        class="InputWithIdentifier--txtNameContainer TextInput--main"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                        >
                          <div
                            class="Text--withDocsTooltip"
                            data-tooltip-id="universalInputNameWithId"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              Id
                            </p>
                          </div>
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            :
                          </p>
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-editable-text InputWithIdentifier--idValue"
                                tabindex="0"
                              >
                                <span
                                  class="bp3-editable-text-content"
                                  style="height: 1px; line-height: 1px; min-width: 0;"
                                >
                                  asv
                                </span>
                              </div>
                            </span>
                          </span>
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="Edit"
                            style="vertical-align: middle; cursor: pointer;"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </div>
                        <div
                          class="bp3-form-group"
                          data-id="name-0"
                        >
                          <label
                            class="bp3-label"
                            for="name"
                          >
                            <span
                              class="Tooltip--acenter"
                              data-tooltip-id="inputSetV1Form_name"
                            >
                              name
                            </span>
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="name"
                                type="text"
                                value="asv"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="description-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="tags-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main footer StyledProps--padding-xlarge"
                  >
                    <button
                      aria-label="save"
                      class="bp3-button Button--button StyledProps--font StyledProps--main saveCancelBtn Button--with-current-color Button--variation Button--variation-primary"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        save
                      </span>
                    </button>
                    <button
                      aria-label="cancel"
                      class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main saveCancelBtn Button--with-current-color Button--variation Button--variation-tertiary"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <div
                        class="bp3-spinner bp3-button-spinner"
                      >
                        <div
                          class="bp3-spinner-animation"
                        >
                          <svg
                            height="20"
                            stroke-width="16.00"
                            viewBox="-3.00 -3.00 106.00 106.00"
                            width="20"
                          >
                            <path
                              class="bp3-spinner-track"
                              d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                            />
                            <path
                              class="bp3-spinner-head"
                              d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                              pathLength="280"
                              stroke-dasharray="280 280"
                              stroke-dashoffset="210"
                            />
                          </svg>
                        </div>
                      </div>
                      <span
                        class="bp3-button-text"
                      >
                        cancel
                      </span>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input Sets V1 render inputset with no inputSetResponse  1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard pageHeaderStyles StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    data-testid="page-header"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/cd"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="cd-main"
              >
                <svg
                  height="16"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                    fill="url(#cd-main_svg__a)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cd-main_svg__a"
                      x1="6.774"
                      x2="21.5"
                      y1="2"
                      y2="30"
                    >
                      <stop
                        stop-color="#62F91F"
                      />
                      <stop
                        offset="1"
                        stop-color="#45BD35"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                test
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/cd/orgs/testOrg/projects/test/pipelines"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                pipelines
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/cd/orgs/testOrg/projects/test/pipelines/pipeline/input-sets"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="width: 42%;"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold StyledProps--font-variation-h4 StyledProps--margin-right-medium"
          style="--text-line-clamp: 1;"
        >
          inputSets.newInputSetLabel
        </p>
        <span
          class="bp3-popover-wrapper bp3-dark reconcileMenu"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              aria-label="input set menu actions"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Options"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 4 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="2"
                    cy="2"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="8"
                    r="1.5"
                  />
                  <circle
                    cx="2"
                    cy="14"
                    r="1.5"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main inputSetForm"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <div
            class="inputsetGrid"
          >
            <div>
              <form
                action="#"
                class="FormikForm--main"
              >
                <div>
                  <div
                    class="Layout--vertical StyledProps--main content StyledProps--padding-xlarge"
                  >
                    <div
                      class="StyledProps--font StyledProps--main main nameiddescription"
                    >
                      <div
                        class="InputWithIdentifier--txtNameContainer TextInput--main"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                        >
                          <div
                            class="Text--withDocsTooltip"
                            data-tooltip-id="universalInputNameWithId"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              Id
                            </p>
                          </div>
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            :
                          </p>
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                                tabindex="0"
                              >
                                <span
                                  class="bp3-editable-text-content"
                                  style="height: 1px; line-height: 1px; min-width: 0;"
                                />
                              </div>
                            </span>
                          </span>
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="Edit"
                            style="vertical-align: middle; cursor: pointer;"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </div>
                        <div
                          class="bp3-form-group"
                          data-id="name-0"
                        >
                          <label
                            class="bp3-label"
                            for="name"
                          >
                            <span
                              class="Tooltip--acenter"
                              data-tooltip-id="inputSetV1Form_name"
                            >
                              name
                            </span>
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="name"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="description-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="tags-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                  <div
                    class="Layout--horizontal StyledProps--main footer StyledProps--padding-xlarge"
                  >
                    <button
                      aria-label="save"
                      class="bp3-button Button--button StyledProps--font StyledProps--main saveCancelBtn Button--with-current-color Button--variation Button--variation-primary"
                      type="submit"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        save
                      </span>
                    </button>
                    <button
                      aria-label="cancel"
                      class="bp3-button Button--button StyledProps--font StyledProps--main saveCancelBtn Button--with-current-color Button--variation Button--variation-tertiary"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        cancel
                      </span>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
